<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lenovo.moviereview.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/da_title_text_color"
            android:background="@color/da_background_color"
            android:textStyle="bold"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingLeft="15dp"
            android:text="@string/da_movie_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_movie_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:src="@drawable/default_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/da_release_date"/>

                <TextView
                    android:id="@+id/tv_user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/da_user_rating"/>

                <Button
                    android:id="@+id/bv_favourite_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/da_button_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_movie_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingTop="15dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:text="@string/da_movie_synopsis"/>

        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingTop="6dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#dadada"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_handle_movie_trailers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:clipToPadding="false"
            android:paddingBottom="8dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_handle_movie_comments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:clipToPadding="false"
            android:paddingBottom="8dp"/>

    </LinearLayout>
</ScrollView>
